tests/errors/lex_test25.kt
// This file contains an illegal token
param
